--- a/single-work.html
+++ b/single-work.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Single Work Page | AsmrProg</title>
+    <title>Single Work Page | Damiangerona</title>
+</head></title>
 </head>
 
 <body>
