--- a/works.html
+++ b/works.html
@@ -85,8 +85,8 @@
                         <div class="year-badge">2023</div>
                         <h4>Troubleshoot Printer</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>During my internship, I enhanced my technical skills by gaining a deeper understanding of various printer models, troubleshooting techniques, and diagnostic tools. I successfully diagnosed and resolved a range of printer issues, including connectivity problems, paper jams, and driver-related issues. This experience has significantly
+                        improved my ability to analyze and solve technical problems efficiently</p>
                 </div>
             </div>
         </div>
