--- a/works.html
+++ b/works.html
@@ -73,8 +73,8 @@
                         <div class="year-badge">2023</div>
                         <h4>Troubleshooting Computers</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Throughout the internship, I significantly improved my technical skills by gaining hands-on experience with various computer hardware and software components. I successfully diagnosed and resolved a diverse range of computer issues, including hardware malfunctions, software glitches, and system performance concerns. This experience has not only broadened my technical
+                        knowledge but also honed my ability to address complex computer-related challenges..</p>
                 </div>
             </div>
             <div class="item">
